<resources>
    <string name="app_name">MappingSound</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- main activity -->
    <string name="navigation_record">Record</string>
    <string name="navigation_history">History</string>

    <!-- record fragment -->
    <string name="record_start">start</string>
    <string name="record_stop">stop</string>
    <string name="record_info">Last Recording</string>
    <string name="export_db">Export Database</string>

    <!-- history fragment -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="type">Type</string>
    <string name="place">Place </string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="save_edit">Save Edit</string>
    <string name="delete">delete</string>

    <string name="title_activity_audio_record_test">AudioRecordTest</string>
    <string name="remote_service_started">remove service started</string>
    <string name="remote_service_stopped">remote service stopped</string>
    <string name="local_service_label">recording</string>
    <string name="remote_service_connected">connected</string>
    <string name="local_service_disconnected">service disconnected</string>
</resources>
